test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/chainsaw-step-03-apply-1-1.yaml
apiVersion: v1
data:
  foo: dGhpc2hhc2JlZW5tb2RpZmllZA==
kind: Secret
metadata:
  name: newsecret
  namespace: pol-clone-nosync-modify-downstream-ns
type: Opaque
