test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/cloned-secret.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: newsecret
  namespace: pol-clone-nosync-modify-downstream-ns
type: Opaque
