test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/create-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mycm
  namespace: pol-clone-nosync-modify-downstream-ns
data:
  food: cheese
  day: monday
  color: red
