test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: Policy
metadata:
  name: pol-clone-nosync-modify-downstream
  namespace: pol-clone-nosync-modify-downstream-ns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
