test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/01-create.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create
spec:
  timeouts: {}
  try:
  - apply:
      file: manifests.yaml
  - assert:
      file: policy-ready.yaml
