test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-downstream/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-nosync-modify-downstream
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: manifests.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-nosync-modify-downstream
        - name: namespace
          value: pol-clone-nosync-modify-downstream-ns
  - name: step-02
    try:
    - apply:
        file: create-cm.yaml
    - assert:
        file: cloned-secret.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
